tests/NormalTests/paczka1/fuzzy1/61815003.err
Error in line 5: ctk A364 6,6
Error in line 6: K9S S44 54,8
Error in line 21: K9S A364 99,5
Error in line 26: K9S A519 86,5
Error in line 27: K9S S44 18,0
Error in line 30: K9S A519 69,1
Error in line 35: ctk A816 30,9
Error in line 36: ctk A519 95,3
